[TD-226] Upgrader logic for database (#323)
[TD-226] Upgrader logic for database

  * Remove automatic creation/upgrade of apiserver database schema
  * apiserver has a (for dev) option '--update-db-schema' to force
    creation/upgrade of the database schema.
  * DbPool has a connect/check_db_version/update_db_version methods
    to connect to the DB, to check the db version is up to date and
    to create/upgrade the db schema.
  * supervisor config.yaml temporarly is using the '--update-db-schema'
    flag until the tdserver gets the new subcommands to create/upgrade
    tabsdata system.

Using an enum for apiserver cli to create/update/auto the schema

[TD-226]: https://tabsdata.atlassian.net/browse/TD-226?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

--- a/server/binaries/td-server/resources/profiles/internal/default/workspace/config/config.yaml
+++ b/server/binaries/td-server/resources/profiles/internal/default/workspace/config/config.yaml
@@ -53,6 +53,7 @@ controllers:
           - stdin-config: true
           - database-url: file://${TD_URI_REPOSITORY}/database/tabsdata.db
           - storage-url: file://${TD_URI_REPOSITORY}/storage
+          - db-schema: auto
         get-states:
           - state-type: blob
             state-key: apiserver-configuration
