--- a/server/binaries/td-server/Cargo.toml
+++ b/server/binaries/td-server/Cargo.toml
@@ -19,43 +19,51 @@ version = { workspace = true }
 
 [[bin]]
 name = "tdserver"
-path = "src/bin/tdserver.rs"
-
-[[bin]]
-name = "bootloader"
-path = "src/bin/bootloader.rs"
-
-[[bin]]
-name = "importer"
-path = "src/bin/importer.rs"
+path = "src/tdserver.rs"
 
 [[bin]]
 name = "supervisor"
-path = "src/bin/supervisor.rs"
+path = "src/supervisor.rs"
+
+[[bin]]
+name = "bootloader"
+path = "src/bootloader.rs"
+
+[[bin]]
+name = "apiserver"
+path = "src/apiserver.rs"
+
+[[bin]]
+name = "importer"
+path = "src/importer.rs"
 
 [[bin]]
 name = "transporter"
-path = "src/bin/transporter.rs"
+path = "src/transporter.rs"
+
+[[example]]
+name = "apisimple"
+path = "examples/server/apisimple.rs"
+
+[[example]]
+name = "towerservice"
+path = "examples/tower/service.rs"
 
 [[example]]
 name = "tableframe"
 path = "examples/tableframe/extension.rs"
 
 [[example]]
-name = "simple_server"
-path = "examples/server/simple_server.rs"
+name = "log2file"
+path = "examples/telemetry/log2file.rs"
 
 [[example]]
-name = "log_file"
-path = "examples/telemetry/log_file.rs"
+name = "log2stdout"
+path = "examples/telemetry/log2stdout.rs"
 
 [[example]]
-name = "log_stdout"
-path = "examples/telemetry/log_stdout.rs"
-
-[[example]]
-name = "service"
-path = "examples/tower/service.rs"
+name = "helloworold"
+path = "examples/hello/helloworld.rs"
 
 [[example]]
 name = "hal"
@@ -64,10 +72,6 @@ path = "examples/dummy/hal.rs"
 [[example]]
 name = "tars"
 path = "examples/dummy/tars.rs"
-
-[lib]
-name = "tabsdatalib"
-path = "src/lib/lib.rs"
 
 [features]
 api-docs = []
@@ -81,7 +85,7 @@ test_tower_metadata = ["td-tower/test_tower_metadata"]
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "paste", "strum", "td-schema", "toml", "utoipa-axum"]
+ignored = ["openssl", "clap_derive", "getset", "http", "paste", "serde", "serde_json", "strum", "strum_macros", "toml", "utoipa-axum"]
 
 # Build dependencies
 
@@ -90,7 +94,6 @@ ignored = ["openssl", "paste", "strum", "td-schema", "toml", "utoipa-axum"]
 # Internal dependencies
 
 td-build = { workspace = true }
-td-python = { workspace = true }
 
 # External dependencies
 
@@ -112,74 +115,42 @@ tm-workspace = { workspace = true }
 td-apiserver = { workspace = true }
 td-common = { workspace = true }
 td-database = { workspace = true }
-td-error = { workspace = true }
 te-tableframe = { workspace = true }
 ta-tableframe = { workspace = true }
-td-python = { workspace = true }
+td-shuttle = { workspace = true }
 td-storage = { workspace = true }
+td-supervisor = { workspace = true }
 td-tower = { workspace = true }
 
 ## Extensions
 
 # External dependencies
 
-async-trait = { workspace = true }
-atomic_enum = { workspace = true }
 axum = { workspace = true, features = ["macros"] }
-base64 = { workspace = true }
-bytes = { workspace = true }
-chrono = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
-clap_derive = { workspace = true }
+clap_derive = { workspace = true}
 colored = { workspace = true }
-derive_builder = { workspace = true }
-dirs = { workspace = true }
-futures = { workspace = true }
-futures-util = { workspace = true }
 getset = { workspace = true }
 http = { workspace = true }
-indicatif = { workspace = true }
-ignore = { workspace = true }
-include_dir = { workspace = true }
-indexmap = { workspace = true }
-itertools = { workspace = true }
-linemux = { workspace = true }
-num-format = { workspace = true }
-object_store = { workspace = true, features = ["aws", "azure", "gcp", "http"] }
 paste = { workspace = true }
 path-slash = { workspace = true }
-polars = { workspace = true, features = ["lazy", "parquet", "csv", "json", "polars-lazy", "streaming", "cloud", "aws", "azure", "gcp", "cloud_write"] }
-regex = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-serde_yaml = { workspace = true }
 strum = { workspace = true }
 strum_macros = { workspace = true }
 supports-color = { workspace = true }
-sysinfo = { workspace = true }
-tabled = { workspace = true }
-tempfile = { workspace = true }
-testdir = { workspace = true }
 textwrap = { workspace = true }
 terminal_size = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tower = { workspace = true, features = ["buffer", "limit", "make", "timeout", "util"] }
 tracing = { workspace = true }
-url = { workspace = true, features = ["serde"] }
 utoipa = { workspace = true, features = ["axum_extras", "preserve_order", "uuid"] }
 utoipa-axum = { workspace = true }
-walkdir = { workspace = true }
-wildmatch = { workspace = true }
 
 [dev-dependencies]
-ta-tableframe = { workspace = true, features = ["td-test"] }
-te-tableframe = { workspace = true, features = ["td-test"] }
 td-common = { workspace = true, features = ["td-test"] }
-td-database = { workspace = true, features = ["td-test"] }
-td-schema = { workspace = true, features = ["td-test"] }
-td-server = { workspace = true, features = ["td-test"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
