--- a/server/libraries/td-supervisor/Cargo.toml
+++ b/server/libraries/td-supervisor/Cargo.toml
@@ -30,7 +30,7 @@ test_logging = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum", "toml", "tm-workspace"]
+ignored = ["openssl", "ignore", "indicatif", "strum", "toml", "tm-workspace"]
 
 # Build dependencies
 
