[TD-436] Fix wrong ser/deser on functions responses in supervisor & apiserver (#354)

--- a/server/libraries/td-objects/Cargo.toml
+++ b/server/libraries/td-objects/Cargo.toml
@@ -76,6 +76,7 @@ polars = { workspace = true }
 regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+serde_yaml = { workspace = true }
 serde_valid = { workspace = true }
 sqlx = { workspace = true }
 strum = { workspace = true }
