[TD-437] Forward mount options (state - stdin) to all function workers (#355)

--- a/server/binaries/td-server/resources/profiles/internal/default/workspace/config/config.yaml
+++ b/server/binaries/td-server/resources/profiles/internal/default/workspace/config/config.yaml
@@ -75,3 +75,6 @@ controllers:
           - input-folder
           - output-folder
           - current-instance
+        get-states:
+          - state-type: map
+            state-key: apiserver-mounts-options
