--- a/connectors/python/tabsdata_salesforce/requirements.txt
+++ b/connectors/python/tabsdata_salesforce/requirements.txt
@@ -2,5 +2,5 @@
 # Copyright 2025 Tabs Data Inc.
 #
 
--r requirements-first-party.txt_
--r requirements-third-party.txt_
+-r requirements/requirements-first-party.txt
+-r requirements/requirements-third-party.txt
