--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,15 +4,17 @@
 
 # Required packages to test and build the project. They should not be installed by the client.
 
--r requirements.txt
--r connectors/python/tabsdata_mongodb/requirements.txt
--r connectors/python/tabsdata_salesforce/requirements.txt
--r connectors/python/tabsdata_snowflake/requirements.txt
+# Third-party dev dependencies
+
+-r requirements/requirements-dev-third-party.txt
+-r connectors/python/tabsdata_mongodb/requirements/requirements-dev-third-party.txt
+-r connectors/python/tabsdata_salesforce/requirements/requirements-dev-third-party.txt
+-r connectors/python/tabsdata_snowflake/requirements/requirements-dev-third-party.txt
 
 # Third-party dependencies
 
--r requirements-dev-third-party.txt_
+-r requirements/requirements-third-party.txt
+-r connectors/python/tabsdata_mongodb/requirements/requirements-third-party.txt
+-r connectors/python/tabsdata_salesforce/requirements/requirements-third-party.txt
+-r connectors/python/tabsdata_snowflake/requirements/requirements-third-party.txt
 
-# First-party dependencies
-
--r requirements-dev-first-party.txt_
