--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@
 # Copyright 2024 Tabs Data Inc.
 #
 
--r requirements-first-party.txt_
--r requirements-third-party.txt_
+-r requirements/requirements-third-party.txt
+-r requirements/requirements-first-party.txt
