[TD-450] Unify system columns removal and ensure all table outputs (except download) remove all system columns (#372)

--- a/server/libraries/td-services/Cargo.toml
+++ b/server/libraries/td-services/Cargo.toml
@@ -57,6 +57,7 @@ td-execution = { workspace = true }
 td-objects = { workspace = true }
 td-security = { workspace = true }
 td-storage = { workspace = true }
+td-tableframe = { workspace = true }
 td-tower = { workspace = true }
 
 ## Extensions
