--- a/server/binaries/td-server/Cargo.toml
+++ b/server/binaries/td-server/Cargo.toml
@@ -62,6 +62,10 @@ name = "log2stdout"
 path = "examples/telemetry/log2stdout.rs"
 
 [[example]]
+name = "log4span"
+path = "examples/telemetry/log4span.rs"
+
+[[example]]
 name = "helloworold"
 path = "examples/hello/helloworld.rs"
 
@@ -146,6 +150,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tower = { workspace = true, features = ["buffer", "limit", "make", "timeout", "util"] }
 tracing = { workspace = true }
+tracing-futures = { workspace = true }
 utoipa = { workspace = true, features = ["axum_extras", "preserve_order", "uuid"] }
 utoipa-axum = { workspace = true }
 
