[TD-465] Use TableFrameContex in TableFrame instatation operations (#387)

--- a/make/fragments/tasks/permit_rs.toml
+++ b/make/fragments/tasks/permit_rs.toml
@@ -28,6 +28,9 @@ script = [
         assert_fail
     end
 
+    version = trim ${result.stdout}
+    info "❇️ Rust version: ${version}"
+
     result = exec python -c "import os, sys, subprocess; v = tuple(map(int, os.environ['TABSDATA_RUST_VERSION'].split('.'))); r = subprocess.check_output(['rustc', '--version']).decode().split()[1]; rv = tuple(map(int, r.split('.'))); sys.exit(0 if rv >= v else 1)"
     code = set ${result.code}
     if not equals ${code} "0"
